--- a/details.html
+++ b/details.html
@@ -43,6 +43,9 @@
         <div class="container body-content">
             
             <h1> Details Page with more content... </h1>
+            <ol>
+                <li>setup to use diff.tool - default ...</li>
+            </ol>
 
             <hr />
             <footer>
