Modified details adder the li for branch 01

--- a/details.html
+++ b/details.html
@@ -45,6 +45,7 @@
             <h1> Details Page with more content... </h1>
             <ol>
                 <li>setup to use diff.tool - default ...</li>
+                <li>this is the one changed</li>
             </ol>
 
             <hr />
