Simple notification for pushing branch

--- a/details.html
+++ b/details.html
@@ -45,7 +45,8 @@
             <h1> Details Page with more content... </h1>
             <ol>
                 <li>setup to use diff.tool - default ...</li>
-                <li>this is the one changed</li>
+                <li>this is the one change</li>
+                <li>This change was made locally and puhed to GitHub at the brach level</li>
             </ol>
 
             <hr />
